# DarkTerm_Retro

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: crt_fragment.glsl  crt_vertex.glsl  solid_fragment.glsl  solid_vertex.glsl  text_fragment.glsl  text_vertex.glsl
src/: ThemeManager.cpp  ThemeManager.h  glad.c  main.cpp
